# xssninja

./: Cargo.toml  LICENSE  readme-ptbr.md  readme.md
src/: main.rs  opt.rs  utils.rs  wordlist.rs  xss_checker.rs
wordlists/: sam-cc-parameters-mixedcase-all.txt
