[package]
name = "xssninja"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
structopt = "0.3"
url = "2.2"
regex = "1.5"
scraper = "0.13"
log = "0.4"
futures = "0.3"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"